implemented cart visuals

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
             <li class="navLink"><a href="#">About</a></li>
             <li class="navLink"><a href="#">Contact</a></li>
             <li class="navLink"><a href="#">Sale</a></li>
-            <li class="navLink">
+            <li class="navLink" id="navLinkEnd">
                 <button id="darkToggle">
                     <img class="darkToggleImg" src="./images/darkToggle.svg" alt="o">
+                </button>
+                <button id="cart">
+                    <img class="cartImg" src="./images/Cart.svg" alt="o">
                 </button>
             </li>
         </ul>
